Prikaz najkrace rute na mapi

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     //Maps
     implementation 'com.google.maps.android:maps-compose:2.7.2'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+
+    //Prikaz rute
+    implementation("com.squareup.moshi:moshi-kotlin:1.14.0")
 }
